--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "three": "^0.140.2"
   },
   "scripts": {
-  "predeploy": "npm run build",
-  "start": "node fetch.js && react-scripts start",
-  "build": "react-scripts build",
-  "deploy": "gh-pages -b master -d build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
-  "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
+    "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
